--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>squid-tac-tournament</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Squid Game 2 AI</title>
+    <meta name="description" content="AI Agent Generated Project" />
+    <meta name="author" content="SquidGame2AI" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
